[tool:pytest]
norecursedirs= .* *.egg* build dist conda.recipe
addopts =
    --cov ipypdf
    -k tests
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --ignore envs/
    --cov-report term-missing
    --tb native
    --strict-markers
    --durations=20
markers =
    serial: execute test serially (to avoid race conditions)


[options.extras_require]
development = 
  pytest
  pytest-cov
  coverage
  black
  build
  twine